fix: language switcher place changed and overflowing top header bug foxed

--- a/src/Components/LanguageSwitcher/LanguageSwitcher.scss
+++ b/src/Components/LanguageSwitcher/LanguageSwitcher.scss
@@ -23,7 +23,7 @@
     border-radius: 6px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-top: 5px;
-    min-width: 150px;
+    // min-width: 150px;
     z-index: 10;
   }
 
