--- a/src/sass/common/_header.scss
+++ b/src/sass/common/_header.scss
@@ -90,6 +90,7 @@
   }
   .cs_top_header_in {
     height: 50px;
+    overflow: hidden;
   }
   .cs_main_header_right {
     display: flex;
